# lib/db/src/schema/index.ts
@@ -5,3 +5,4 @@ export * from "./vault_items";
 export * from "./vault_entries";
 export * from "./vault_item_access";
 export * from "./audit_logs";
+export * from "./settings";
